# rag-documentation-assistant

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
infrastructure/: alarms.json  dashboard.json  template.yaml
sample_docs/: return_policy.md  shipping_info.md  support.md  test.txt
scripts/: create-alarms.sh
src/ingestion/: chunker.py  embeddings.py  loader.py  pipeline.py
src/lambda/ingest/: handler.py  requirements.txt
src/lambda/query/: handler.py  requirements.txt
src/query/: generator.py  rag.py
src/shared/: vector_store.py
tests/: conftest.py  test_chunker.py  test_embeddings.py  test_generator.py  test_ingest_handler.py  test_loader.py  test_pipeline.py  test_query_handler.py  test_rag_pipeline.py  test_vector_store.py
