[project]
name = "rag-documentation-assistant"
version = "1.0.0"
description = "Production-ready RAG with semantic search and AWS deployment"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
